--- a/templates/mostrar_salvas_backup.html
+++ b/templates/mostrar_salvas_backup.html
@@ -46,7 +46,7 @@
       <div class="stars">
         <div class="card gap-2" style="padding: 10px; width: 300px">
           <img class="card-img-top"
-            src="http://127.0.0.1:5000/static/uploads/recipes/{{receita_salva.id_receita}}_{{receita_salva.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
+            src="http://18.208.182.254/static/uploads/recipes/{{receita_salva.id_receita}}_{{receita_salva.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
             alt="Card image cap">
           <div class="card-body">
             <h5 class="card-text row">{{receita_salva.titulo}}</h5>
