--- a/templates/resultados_busca_ingredientes.html
+++ b/templates/resultados_busca_ingredientes.html
@@ -75,7 +75,7 @@
     <div class="card">
       <a href="{{ url_for('mostrar_receita',id_receita=value['id_receita']) }}">
         <img class="card-img-top"
-          src="http://127.0.0.1:5000/static/uploads/recipes/{{value['id_receita']}}_{{value['titulo'].replace(' ','')}}/{{caminho.path_imagem}}"
+          src="http://18.208.182.254/static/uploads/recipes/{{value['id_receita']}}_{{value['titulo'].replace(' ','')}}/{{caminho.path_imagem}}"
           alt="Card image cap">
       </a>
       <div class="card-body">
