--- a/templates/minhas_receitas.html
+++ b/templates/minhas_receitas.html
@@ -70,7 +70,7 @@
     <div class="card gap-2" style="padding: 10px; width: 15rem">
       <a href="{{ url_for('mostrar_receita',id_receita=receita.id_receita) }}">
       <img class="card-img-top"
-        src="http://127.0.0.1:5000/static/uploads/recipes/{{receita.id_receita}}_{{receita.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
+        src="http://18.208.182.254/static/uploads/recipes/{{receita.id_receita}}_{{receita.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
         alt="Card image cap">
       </a>
       <div class="card-body">
@@ -94,15 +94,6 @@
   </div>
 </div>
 {% endfor %}
-
-
-
-
-
-
-
-
-
 
 
 {% endblock %}
