--- a/templates/mostrar_receita.html
+++ b/templates/mostrar_receita.html
@@ -58,7 +58,7 @@
       {% if receita.id_receita == caminho.id_receita %}
       <div class="card gap-2" style="padding: 10px; width: 15rem">
         <img class="card-img-top"
-          src="http://127.0.0.1:5000/static/uploads/recipes/{{receita.id_receita}}_{{receita.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
+          src="http://18.208.182.254/static/uploads/recipes/{{receita.id_receita}}_{{receita.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
           alt="Card image cap">
         <div class="card-body">
           <h5 class="card-text row">{{receita.titulo}}</h5>
@@ -174,7 +174,7 @@
     
     <div class="resize img card gap-2 flex-item" style=" padding: 10px; width: 250px;height: 250px;">
       <a href="{{ url_for('mostrar_receita',id_receita=receita) }}">
-        <img src="http://127.0.0.1:5000/static/uploads/recipes/{{receita}}_{{titulo_receita.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
+        <img src="http://18.208.182.254/static/uploads/recipes/{{receita}}_{{titulo_receita.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
         alt="Card">
       </a>
       <div class="flex flex-row">
