--- a/templates/resultados_busca_titulo.html
+++ b/templates/resultados_busca_titulo.html
@@ -74,7 +74,7 @@
     <div class="card">
       <a href="{{ url_for('mostrar_receita',id_receita=receita.id_receita) }}">
         <img class="card-img-top"
-          src="http://127.0.0.1:5000/static/uploads/recipes/{{receita.id_receita}}_{{receita.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
+          src="http://18.208.182.254/static/uploads/recipes/{{receita.id_receita}}_{{receita.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
           alt="Card image cap">
       </a>
       <div class="card-body">
@@ -82,6 +82,9 @@
         <p class="card-text"> 
         </p>
       </div>
+
+
+      
     </div>
     {% endif %}
     {% endfor %}
