alteracao na imagem

--- a/templates/editar_perfil.html
+++ b/templates/editar_perfil.html
@@ -45,7 +45,7 @@
 <div style="display:flex; flex-direction:row; justify-content:center;">
   
   <div class="circle flex-item" style="display:flex; flex-direction:column;">
-    <img style="max-height: 150px; border-radius: 50%;border: 1px solid gray; margin-bottom: 5px;" src="/home/ubuntu/myrecipe_v2/static/uploads/users/{{current_user.id}}/{{usuario.foto}}" alt="Card">
+    <img style="max-height: 150px; border-radius: 50%;border: 1px solid gray; margin-bottom: 5px;" src="/static/uploads/users/{{current_user.id}}/{{usuario.foto}}" alt="Card">
     <span style="text-align:center">{{usuario.nome}}</span>
   </div>
   
