--- a/templates/home_sem_login.html
+++ b/templates/home_sem_login.html
@@ -17,14 +17,7 @@
   <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
   <title>My Recipe</title>
 </head>
-  <style>.teste{
-    background-image: url('http://i.stack.imgur.com/kx8MT.gif');
-    background-size: cover;
-    height: 100vh;
-    padding:0;
-    margin:0;
-  }
-  </style>
+
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark"; style="background-color: #c42020;">
@@ -34,7 +27,7 @@
           My Recipe - Receitas Inteligentes
         </a>
         
-          <form class="d-flex">
+          <form class="d-flex gap-2">
             <a class="btn btn-light" style="background-color:#c42020; color: beige;" href="{{ url_for('login') }}" role="button">Login</a>
             <a class="btn btn-light" style="background-color:#c42020; color: beige;" href="{{ url_for('cadastrar_usuario') }}" role="button">Cadastrar</a>
           </form>
@@ -44,6 +37,7 @@
 
 
   <div class="teste">
+    
 
     {% block conteudo %}
     
