--- a/templates/feed_logado.html
+++ b/templates/feed_logado.html
@@ -225,7 +225,7 @@
         <div class="flex flex-row">
           <a href="{{ url_for('mostrar_receita',id_receita=receita.id_receita) }}">
             <img
-              src="static/uploads/recipes/{{receita.id_receita}}_{{receita.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
+              src="/static/uploads/recipes/{{receita.id_receita}}_{{receita.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
               alt="Card" class="card-img-top">
           </a>
         </div>
