--- a/templates/mostrar_salvas.html
+++ b/templates/mostrar_salvas.html
@@ -61,7 +61,7 @@
   <div class="card">
     <a href="{{ url_for('mostrar_receita',id_receita=receita_salva.id_receita) }}">
     <img
-      src="/static/uploads/recipes/{{receita_salva.id_receita}}_{{receita_salva.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
+      src="http://18.208.182.254/static/uploads/recipes/{{receita_salva.id_receita}}_{{receita_salva.titulo.replace(' ','')}}/{{caminho.path_imagem}}"
       class="card-img-top"></a>
     <div class="card-body">
       <h5 class="card-title">{{receita_salva.titulo}}</h5>
