--- a/templates/cadastrar_receita.html
+++ b/templates/cadastrar_receita.html
@@ -107,13 +107,14 @@
                         required>
                 </label>
 
-                <label style="width: 40%;" for="autoSizingSelect">Tipo refeição:
+                <label style="width: 40%;" for="autoSizingSelect">Tipo receita:
                     <select class="form-select" name="tiporefeicao" id="autoSizingSelect" required>
                         <option value="1">Café da manhã</option>
                         <option value="2">Almoço</option>
                         <option value="3">Café da tarde</option>
                         <option value="4">Jantar</option>
                         <option value="5">Sobremesa</option>
+                        <option value="6">Bebida</option>
                     </select>
                 </label>
             </div>
