--- a/templates/mostrar_receita.html
+++ b/templates/mostrar_receita.html
@@ -58,7 +58,7 @@
       {% if receita.id_receita == caminho.id_receita %}
       <div class="card gap-2" style="padding: 10px; width: 15rem">
         <img class="card-img-top"
-          src="static/uploads/recipes/{{receita.id_receita}}/{{caminho.path_imagem}}"
+          src="{{url_for('static', filename='uploads/recipes/{{receita.id_receita}}/{{caminho.path_imagem}}')}}"
           alt="Card image cap">
         <div class="card-body">
           <h5 class="card-text row">{{receita.titulo}}</h5>
