--- a/templates/feed_logado.html
+++ b/templates/feed_logado.html
@@ -248,7 +248,7 @@
 
 <div style="flex-direction:column; justify-content: flex-start; margin-top: 100px;">
   <span>Mais salvas</span>
-  <div class="flex-container gap-2" style=" background-color:rgb(255, 255, 255)"></div>
+  <div class="flex-container gap-2" style=" background-color:rgb(255, 255, 255)">
   <div class="scrolling-wrapper" style="padding:10px; text-align:center">
     {% for receita_salva in receitas_salvas %}
     {% for caminho in paths %}
