--- a/templates/feed_logado.html
+++ b/templates/feed_logado.html
@@ -216,9 +216,9 @@
 
 
 <div style="flex-direction:column; justify-content: flex-start; margin-top: 100px;">
-  
+  <span style="padding-left:20px"><strong>Mais recentes</strong></span>
   <div class="flex-container gap-2" style=" background-color:rgb(255, 255, 255)">
-    <span>Mais recentes</span>
+    
     <div class="scrolling-wrapper" style="padding:10px; text-align:center">
       {% for receita in receitas_novas %}
       {% for caminho in paths %}
@@ -248,9 +248,9 @@
 
 
 <div style="flex-direction:column; justify-content: flex-start; margin-top: 100px;">
-  
+  <span style="padding-left:20px"><strong>Mais salvas</strong></span> 
   <div class="flex-container gap-2" style=" background-color:rgb(255, 255, 255)">
-    <span>Mais salvas</span>
+    
     <div class="scrolling-wrapper" style="padding:10px; text-align:center">
       {% for receita_salva in receitas_salvas %}
       {% for caminho in paths %}
@@ -281,9 +281,9 @@
 
 
 <div style="flex-direction:column; justify-content: flex-start; margin-top: 100px;">
-  
+  <span style="padding-left:20px"><strong>Melhores avaliadas</strong></span>
   <div class="flex-container gap-2" style=" background-color:rgb(255, 255, 255)">
-    <span>Melhores avaliadas</span>
+    
     <div class="scrolling-wrapper" style="padding:10px; text-align:center">
       {% for receita in maiores_avaliacoes %}
       {% for caminho in paths %}
