--- a/templates/mostrar_receita.html
+++ b/templates/mostrar_receita.html
@@ -141,7 +141,7 @@
   <div class="flex-item gap-2">
     <h6>Modo de preparo</h6>
     <hr>
-    <div class="flex-row gap-2" style="content:center;margin-bottom: 40px;">
+    <div class="flex-row gap-2" style="padding-left:20%;padding-right:20%;content:center;margin-bottom: 40px;">
       {{receita.instrucoes | safe}}
       Esta receita serve <strong>{{receita.porcoes}}</strong> pessoas e leva aproximadamente <strong>{{receita.tempo_preparo}}</strong> minutos de preparo.<br>
     </div>
