--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -16,7 +16,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{{ url_for('static', filename='home_page/css/styles.css') }}" rel="stylesheet" />
     </head>
-    <body id="page-top">
+    <body style="background-color:#fff" id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
