--- a/templates/home_sem_login.html
+++ b/templates/home_sem_login.html
@@ -50,7 +50,7 @@
 </head>
 
 
-<body style="background-color:#f2f2f2">
+<body style="background-color:#f2f2f2; height: max-content;">
     <nav class="navbar navbar-expand-lg navbar-dark"; style="background-color: #c42020;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -75,21 +75,21 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="static/images/livro.jpg" width="400" height="450" class="d-block w-100" alt="...">
+          <img src="static/images/livro.jpg" max-width="400" height="450" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h3>Deixe de lado aquele velho caderno</h3>
             <p style="color:white">Com o My Recipe, você cadastra suas receitas em poucos minutos.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="static/images/ingredientes.jpg" width="400" height="450" class="d-block w-100" alt="...">
+          <img src="static/images/ingredientes.jpg" max-width="400" height="450" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h3>Descubra novas receitas</h3>
             <p style="color:white">Encontre receitas por ingredientes e sistema de recomendação.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="static/images/truques-chefes-de-cozinha.jpg" width="400" height="450" class="d-block w-100" alt="...">
+          <img src="static/images/truques-chefes-de-cozinha.jpg" max-width="400" height="450" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
             <h3>Mão na massa</h3>
             <p style="color:white">Salve, avalie e prepare receitas especiais.</p>
@@ -108,20 +108,20 @@
   </div>
  
     
-<div class="flex flex-column" style="margin-top:50px;align-items:center">
+<div class="flex flex-column" style="margin-top:20px;align-items:center">
     <span style="font-size:40px; color:#c42020"><strong>My Recipe em números</strong></span>
 </div>
 
 <div class="flex flex-row gap-4" style="margin-top:0px;align-items:center">  
-  <div class="flex flex-column" style="margin-top:50px;align-items:center">
+  <div class="flex flex-column" style="margin-top:30px;align-items:center">
     <span style="font-size:60px ;"><strong>{{cont_usuarios}}</strong></span>
     <span>Usuários cadastrados</span>
   </div>
-  <div class="flex flex-column" style="margin-top:50px;align-items:center">
+  <div class="flex flex-column" style="margin-top:30px;align-items:center">
     <span style="font-size:60px ;"><strong>{{cont_receitas}}</strong></span>
     <span>Receitas cadastradas</span>
   </div>
-  <div class="flex flex-column" style="margin-top:50px;align-items:center">
+  <div class="flex flex-column" style="margin-top:30px;align-items:center">
     <span style="font-size:60px ;"><strong>{{cont_avaliacoes}}</strong></span>
     <span>Avaliações de usuários</span>
   </div>  
@@ -135,7 +135,7 @@
 
   
      
-    <footer style="position: fixed;bottom:0;left:30%;right:30% ;">
+    <footer style="position: auto;bottom: -1px;;left:30%;right:30% ;">
       <div class="flex flex-column" style="margin-top:50px; align-items:center; align-self: flex-end;">
         <p>Avalie o sistema em: <a href="https://forms.gle/ghj7DFk2Z5VSKf638" target="_blank">https://forms.gle/ghj7DFk2Z5VSKf638</a></p>
       </div>  
