ajuste na IA para quando não acha nada

--- a/templates/cadastro_usuario.html
+++ b/templates/cadastro_usuario.html
@@ -42,7 +42,7 @@
 				{% endwith %}
 				<form class="login100-form validate-form" action="{{url_for('cadastrar_usuario')}}" enctype="multipart/form-data" method="post">
 					<span class="login100-form-title p-b-26">
-						Cadastro de usuário
+						Cadastro de usuário <p style="color:red">*</p>
 					</span>
 					<div class="wrap-input100 validate-input">
 						<span class="focus-input100" data-placeholder="Escolha uma foto de perfil"></span><br><br>
