--- a/templates/cadastro_usuario.html
+++ b/templates/cadastro_usuario.html
@@ -45,18 +45,18 @@
 						Cadastro de usuário 
 					</span>
 					<div class="wrap-input100 validate-input">
-						<span class="focus-input100" data-placeholder="Escolha uma foto de perfil"></span><p style="color:red">*</p><br><br>
+						<span class="focus-input100" data-placeholder="Escolha uma foto de perfil *"></span><br><br>
 						<input required class="input100" type="file" onchange="Filevalidation()" name="foto"  accept="image/png, image/jpeg"  multiple /> 
 					</div>
 
 					<div class="wrap-input100 validate-input">
 						<input required class="input100" type="text" name="name">
-						<span class="focus-input100" data-placeholder="Nome"></span><p style="color:red">*</p>
+						<span class="focus-input100" data-placeholder="Nome *"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is: a@b.c">
 						<input required class="input100" type="text" name="email">
-						<span class="focus-input100" data-placeholder="Email"></span><p style="color:red">*</p>
+						<span class="focus-input100" data-placeholder="Email *"></span>
 					</div>
 
                     <div class="wrap-input100 validate-input" data-validate="Enter password">
@@ -64,11 +64,11 @@
 							<i class="zmdi zmdi-eye"></i>
 						</span>
 						<input required class="input100 validate-input" type="password" name="password">
-						<span class="focus-input100" data-placeholder="Senha"></span><p style="color:red">*</p>
+						<span class="focus-input100" data-placeholder="Senha *"></span>
 					</div>
 
                     <div class="wrap-input100 validate-input">
-						<span class="focus-input100" data-placeholder="Data de Nascimento"></span><p style="color:red">*</p><br><br>
+						<span class="focus-input100" data-placeholder="Data de Nascimento *"></span><br><br>
 						<input required class="input100" type="date" name="nascimento">
 						
 					</div>
@@ -77,7 +77,7 @@
 						<input class="input100" type="cep" name="cep" pattern="\d{5}-\d{3}||\d{8}">
 						<span class="focus-input100" data-placeholder="CEP (00000-000)"></span>
 					</div>
-
+					<p class="text-center text-muted">Campos com * são obrigatórios no preenchimento deste formulário.</p>
 					<div class="container-login100-form-btn">
 						<div class="wrap-login100-form-btn">
 							<div class="login100-form-bgbtn"></div>
