tamanho da tela de cadastro ajustado

--- a/templates/cadastro_usuario.html
+++ b/templates/cadastro_usuario.html
@@ -25,7 +25,7 @@
   </head>
 <!--===============================================================================================-->
 </head>
-<body>
+<body style="height:max-content">
 	
 
 	<div class="limiter">
