--- a/templates/minhas_receitas.html
+++ b/templates/minhas_receitas.html
@@ -89,7 +89,7 @@
 <div class="flex-container">
   <div class="flex-item gap-2">
     <a class="btn btn-info" href="#" role="button">Compartilhar</a>
-    <a class="btn btn btn-secondary" href="{{url_for('editar_receita',id_receita=receita.id_receita)}}" role="button">Editar</a>
+    <a class="btn btn btn-secondary" href="{{url_for('editar_receita',id_receita=receita.id_receita)}}" role="button">Criar variação</a>
     <a class="btn btn btn-danger" href="{{url_for('deletar_receita',id_receita=receita.id_receita)}}" role="button">Deletar</a>  
   </div>
 </div>
