--- a/templates/cadastrar_receita.html
+++ b/templates/cadastrar_receita.html
@@ -115,6 +115,7 @@
                         <option value="4">Jantar</option>
                         <option value="5">Sobremesa</option>
                         <option value="6">Bebida</option>
+                        <option value="7">Salada</option>                        
                     </select>
                 </label>
             </div>
