--- a/templates/mostrar_salvas.html
+++ b/templates/mostrar_salvas.html
@@ -54,8 +54,8 @@
 </style>
 <div class="flex flex-container resize" style="margin-top: 100px;">
 {% for receita_salva in receitas_salvas %}
-{% for caminho in paths %}
-{% if caminho.id_receita == receita_salva.id_receita%}
+{% for caminho in paths | selectattr('id_receita', 'equalto', receita_salva.id_receita) %}
+
 
 <div class="col-md-3" style="margin-top:40px">
   <div class="card">
@@ -233,7 +233,7 @@
       </div>
     </div>
   
-    {% endif %}
+    
     {% endfor %}
     {% endfor %}
     
