--- a/templates/feed_logado.html
+++ b/templates/feed_logado.html
@@ -51,7 +51,7 @@
 </style>
 <form class="flex-column gap-2" action="{{url_for('buscar_titulo')}}" enctype="multipart/form-data" method="post">
   <div
-    style="margin-top: 50px;  display:flex; flex-direction:row; gap:2px; align-content: center; padding-left: 25%; padding-right: 25%;">
+    style="margin-top: 50px;  display:flex; flex-direction:row; gap:2px; align-content: center; padding-left: 25%; padding-right: auto;">
     <h4>Busque por titulo</h4>
   </div>
   <div
@@ -61,7 +61,7 @@
 
   </div>
   <div
-    style="margin-top: 25px; margin-bottom:50px; display:flex; flex-direction:row; gap:2px; align-content: center; padding-left: 25%; padding-right: 25%;">
+    style="margin-top: 25px; margin-bottom:50px; display:flex; flex-direction:row; gap:2px; align-content: center; padding-left: 25%; padding-right: auto;">
     <button type="submit" class="btn btn-primary">Buscar</button>
   </div>
 </form>
